# todo_backend

./: Cargo.toml
docs/: README.md
src/: lib.rs  main.rs  schema.rs
src/api/: routes.rs
src/api/handlers/: user.rs
src/db/: connection.rs
src/errors/: mod.rs  user_creation_error.rs
src/models/: user.rs
src/services/: user_service.rs
